# smallcalc

./: CMakeLists.txt  android.toolchain.cmake  build_android.sh  build_ios.sh  iOS.toolchain.cmake  readme.md
libsmallcalc/: CMakeLists.txt
libsmallcalc/smallcalc/: Expression.cpp  Expression.h  MathFunctions.h  PrimitiveValue.cpp  PrimitiveValue.h  de_cgvis_moscalc_SmallCalc.h  readme.md  smallcalc.cpp  smallcalc.h  smallcalc_jni.cpp  types.cpp  types.h
libsmallcalc/smallcalc/impl/: AssignmentExpression.cpp  AssignmentExpression.h  Constant.h  NamedFunction.cpp  NamedFunction.h  Parser.cpp  Parser.h  StandardFunctions.cpp  StandardFunctions.h  Tokenizer.cpp  Tokenizer.h  Value.h  Variable.h
libsmallcalc/smallcalc/print/: BoxElements.h  Converter.cpp  Converter.h  DrawEngine.h  Geometry.h  SpaceStack.h  TextDrawer.cpp  TextDrawer.h  Utf8Line.h  print.cpp  print.h
testapp/: CMakeLists.txt  main.cpp
testcases/: CMakeLists.txt  TestEval.cpp  TestMathFormat.cpp  TestMathFunctions.cpp  TestParser.cpp  TestPerformance.cpp  TestTokenizer.cpp
